--- a/styles/painelR.css
+++ b/styles/painelR.css
@@ -308,6 +308,8 @@ button {
     align-items: center;
     justify-content: center;
     border-radius: 15px;
+    background-color: #d3d3d3;
+    padding: 15px;
 }
 
 .swal-title {
