--- a/styles/home.css
+++ b/styles/home.css
@@ -99,11 +99,26 @@ li {
 
 #checkbox {
     display: none;
+
+    
 }
 
 
 /* FIM HEADER */
 
+
+#logoffButton {
+    background-color: #ff4d4d;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    cursor: pointer;
+    border-radius: 5px;
+}
+
+#logoffButton:hover {
+    background-color: #ff1a1a;
+}
 
 .container-titulo {
     display: flex;
@@ -137,12 +152,7 @@ li {
     line-height: 20px;
 }
 
-main {
-    width: 100%;
-    justify-content: center;
-    align-items: center;
-    padding-inline: 390px;
-}
+
 
 #sectionhome {
     display: flex;
@@ -269,6 +279,14 @@ h1 {
     align-items: center;
     margin-top: 20px;
 }
+.bottom-section3 {
+    width: 550px;
+    display: flex;
+    flex-direction: row;
+    gap: 15px;
+    align-items: center;
+    margin-top: 20px;
+}
 
 
 main label {
@@ -326,19 +344,7 @@ input:focus {
     outline: none;
 }
 
-.notebooksinfos {
-    margin-top: 15px;
-    color: #454545;
-    font-size: 1.8rem;
-    list-style-type: none;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
-    position: relative;
-    right: 2.8rem;
 
-}
 
 #indisponivel {
     width: 15px;
@@ -368,11 +374,27 @@ input:focus {
 
 #notestatus {
     display: grid;
-    gap: 15px;
-    grid-template-columns: repeat(4, 1fr);
-    width: 100%;
+    gap: 25px;
+    grid-template-columns: repeat(5, 1fr);
+    max-width: 600px;
+    max-height: 400px;
     margin-top: 30px;
-    overflow-y: scroll;
+    overflow-y: auto;
+}
+
+.notebooksinfos {
+    margin-top: 25px;
+    width: 100%;
+    color: #454545;
+    font-size: 1.6rem;
+    list-style-type: none;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    position: relative;
+    right: 2rem;
+
 }
 
 #notestatus::-webkit-scrollbar {
@@ -559,320 +581,3 @@ input:focus {
 
 
 
-
-
-
-/*================ INÍCIO RESPOSNIVIDADE /*================*/
-
-@media (max-width: 1440px) {
-    body {
-        width: 1440px;
-    }
-
-    main {
-        padding-inline: 100px;
-    }
-
-}
-
-/* Tablet */
-@media (max-width: 1024px) {
-    body {
-        width: 1024px;
-    }
-
-    main {
-        padding-inline: 50px;
-    }
-
-    header {
-        height: 80px;
-    }
-
-    .logo {
-        width: 150px;
-    }
-
-    .logo img {
-        height: 60px;
-    }
-
-    .menu ul {
-        font-size: 1.8rem;
-        gap: 10px;
-    }
-
-    .menu a {
-        width: 150px;
-        height: 50px;
-        border-radius: 10px;
-        gap: 1px;
-        padding-left: 5px;
-        justify-content: center;
-    }
-
-    .titulo {
-        font-size: 3.3rem;
-        color: #454545;
-    }
-
-    #maindireita h2 {
-        font-size: 2.5rem;
-    }
-
-    .container-icone {
-        width: 90px;
-    }
-
-    .container-icone svg {
-        width: 90px;
-    }
-
-}
-
-/* Smartphones grandes */
-@media (max-width: 767px) {
-    body {
-        width: 767px;
-    }
-
-    main {
-        padding-inline: 30px;
-    }
-
-    header {
-        height: 80px;
-    }
-
-    .logo {
-        width: 120px;
-    }
-
-    .menu ul {
-        font-size: 1.6rem;
-        gap: 5px;
-    }
-
-    .container-menu {
-        padding-left: 30px;
-    }
-
-    .menu a {
-        width: 130px;
-    }
-
-    .titulo {
-        font-size: 2.6rem;
-        color: #454545;
-    }
-
-    #mainesquerda>div.top-section>div.img-perfil {
-        width: 121px;
-        height: 103px;
-    }
-
-    .container-titulo {
-        padding-bottom: 15px;
-    }
-
-    .container-paragrafo {
-        font-size: 1.6rem;
-        height: 40px;
-    }
-
-    .label-suporte {
-        font-size: 1.8rem;
-    }
-
-    .input-suporte::placeholder {
-        font-size: 1.4rem;
-    }
-
-    #maindireita {
-        width: 48%;
-    }
-
-    #mainesquerda {
-        width: 48%;
-    }
-
-    #maindireita h2 {
-        font-size: 2rem;
-    }
-
-    #maindireita>ul>li {
-        font-size: 1.4rem;
-    }
-
-
-}
-
-
-/* Smartphones pequenos */
-@media screen and (min-width: 360px) and (max-width: 430px) {
-    body {
-        width: 430px;
-        font-size: 1.2rem;
-    }
-    main{
-        width: 100%;
-    }
-
-    .container-header {
-        display: none;
-        flex-direction: column;
-        width: 100%;
-        height: 100%;
-    }
-
-    .menu ul {
-        align-items: center;
-        height: 100%;
-        flex-direction: column;
-    }
-
-    #container-reserva {
-        flex-direction: column;
-    }
-
-    #mainesquerda {
-        width: 100%;
-        gap: 0px;
-    }
-
-    #maindireita {
-        width: 100%;
-        padding-top: 50px;
-        margin-bottom: 30px;
-    }
-
-    #reservar {
-        width: 100%;
-    }
-
-    .bottom-section2 {
-        display: flex;
-        flex-direction: column;
-
-    }
-
-    .formInputHome1 {
-        width: 100%;
-    }
-
-    .label-suporte {
-        padding-top: 15px;
-    }
-
-    body>main>div.container-titulo>div:nth-child(2)>h1 {
-        font-size: 2.2rem;
-    }
-
-    .formInputHome1{
-        height: max-content;
-    }
-
-    /* ================= menu hamburguer =================  */
-
-    #checkbox {
-        display: none;
-        position: fixed;
-    }
-
-    .toggle {
-        position: relative;
-        width: 40px;
-        height: 40px;
-        cursor: pointer;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        gap: 10px;
-        transition-duration: .3s;
-        margin-left: 30px;
-    }
-
-    .bars {
-        width: 100%;
-        height: 4px;
-        background-color: rgb(253, 255, 243);
-        border-radius: 5px;
-        transition-duration: .3s;
-    }
-
-
-    #checkbox:checked+.toggle #bar2 {
-        transform: translateY(14px) rotate(60deg);
-        margin-left: 0;
-        transform-origin: right;
-        transition-duration: .3s;
-        z-index: 2;
-    }
-
-    #checkbox:checked+.toggle #bar1 {
-        transform: translateY(28px) rotate(-60deg);
-        transition-duration: .3s;
-        transform-origin: left;
-        z-index: 1;
-    }
-
-    #checkbox:checked+.toggle {
-        transform: rotate(-90deg);
-        z-index: 2;
-    }
-
-    #checkbox:checked~.container-header {
-        display: block;
-    }
-
-    #checkbox:checked~.container-header .container-menu {
-        height: 100%;
-        position: fixed;
-        top: 0px;
-        left: 0px;
-        padding-right: 30px;
-        align-items: center;
-        justify-content: center;
-        background: linear-gradient(90deg, #012342, #004a8d, #004a8d, #012342);
-    }
-
-    #checkbox:checked~.container-header .container-menu .menu a {
-        justify-content: start;
-        width: 100vw;
-        height: 80px;
-        font-size: 2rem;
-    }
-
-    #checkbox:checked~.container-header .container-menu .menu a svg {
-        width: 60px;
-        height: 60px;
-        margin-left: 30%;
-
-    }
-
-    #checkbox:checked~.container-header .container-menu .menu a #svg-laptop {
-        width: 70px;
-    }
-
-    #checkbox:checked~.container-header .container-menu .menu ul {
-        height: 100%;
-
-    }
-
-    #checkbox:checked~.container-header .container-menu .menu ul li {
-        height: 100%;
-        width: 100%;
-        padding-left: 10px;
-    }
-
-    #rodape h2 {
-        font-size: 1.2rem;
-
-    }
-
-    /* ================= FIM MENU HAMBURGUER =================  */
-
-
-
-}
