--- a/styles/header-footer.css
+++ b/styles/header-footer.css
@@ -49,6 +49,13 @@ header {
   flex: 1;
   display: flex;
   width: 100%;
+  justify-content: space-around;
+
+}
+
+.menu{
+  display: flex;
+  flex-direction: row;
 }
 
 .menu ul {
@@ -82,6 +89,30 @@ header {
 
 .menu a:hover svg {
   fill: #F7941D;
+}
+
+#logoffButton {
+  background-color: transparent;
+  color: rgb(255, 255, 255);
+  border: none;
+  padding: 10px 20px;
+  cursor: pointer;
+  border-radius: 5px;
+  position: relative;
+  left: 5%;
+  
+}
+
+#logoffButton:hover {
+  color: #F7941D;
+  background-color: #012342;
+  transition: 0.5s;
+}
+
+
+#logoffButton:hover svg{
+  fill: #F7941D;
+  
 }
 
 li {
@@ -252,7 +283,7 @@ button:active {
 
 /*================ INÍCIO RESPOSNIVIDADE /*================*/
 
-@media (max-width: 1440px) {
+@media(max-width: 1440px) {
   body {
     width: 1440px;
   }
@@ -264,7 +295,7 @@ button:active {
 }
 
 /* Tablet */
-@media (max-width: 1024px) {
+@media (min-width: 768px) and (max-width: 1024px) {
   body {
     width: 1024px;
   }
@@ -276,6 +307,13 @@ button:active {
 
   header {
     height: 80px;
+  }
+
+  .container-header {
+    display: none;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
   }
 
   .logo {
@@ -333,11 +371,128 @@ button:active {
     margin-bottom: 0;
   }
 
+    /* ================= menu hamburguer =================  */
+
+  #checkbox {
+    display: none;
+    position: fixed;
+  }
+
+  .toggle {
+    position: relative;
+    width: 40px;
+    height: 40px;
+    cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    transition-duration: .3s;
+    margin-left: 30px;
+  }
+
+  .bars {
+    width: 100%;
+    height: 4px;
+    background-color: rgb(253, 255, 243);
+    border-radius: 5px;
+    transition-duration: .3s;
+  }
+
+
+  #checkbox:checked+.toggle #bar2 {
+    transform: translateY(14px) rotate(60deg);
+    margin-left: 0;
+    transform-origin: right;
+    transition-duration: .3s;
+    z-index: 2;
+  }
+
+  #checkbox:checked+.toggle #bar1 {
+    transform: translateY(28px) rotate(-60deg);
+    transition-duration: .3s;
+    transform-origin: left;
+    z-index: 1;
+  }
+
+  #checkbox:checked+.toggle {
+    transform: rotate(-90deg);
+    z-index: 1001;
+  }
+
+  #checkbox:checked~.container-header {
+    display: block;
+  }
+
+  #checkbox:checked~.container-header .container-menu {
+    height: 100%;
+    width: 35%;
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    padding-right: 30px;
+    align-items: center;
+    justify-content: center;
+    background: linear-gradient(90deg, #012342, #004a8d, #004a8d, #012342);
+    z-index: 1000;
+    flex-direction: column;
+  }
+  #checkbox:checked~.container-header .container-menu .menu {
+    height: 70%;
+    padding-right: 30px;
+    flex-direction: column;
+  }
+
+  #checkbox:checked~.container-header .container-menu .menu a {
+    justify-content: start;
+    width: 50vw;
+    height: 150px;
+    font-size: 2.5rem;
+  }
+
+  #checkbox:checked~.container-header .container-menu .menu a svg {
+    width: 60px;
+    height: 60px;
+    margin-left: 30%;
+
+  }
+
+  #checkbox:checked~.container-header .container-menu .menu a #svg-laptop {
+    width: 70px;
+  }
+
+  #checkbox:checked~.container-header .container-menu .menu ul {
+    height: 90%;
+    margin-right: 80px;
+    margin-top: 80px;
+    display: contents;
+  }
+  #checkbox:checked~.container-header .container-menu  button {
+    margin-right: 30px;
+    margin-top: 50px;
+    font-size: 2rem;
+  }
+  #checkbox:checked~.container-header .container-menu  svg {
+    width: 50px;
+    height: 50px;
+  }
+
+  #checkbox:checked~.container-header .container-menu .menu ul li {
+    height: 100%;
+    width: 100%;
+    padding-left: 10px;
+  }
+
+  
+
+  /* ================= FIM MENU HAMBURGUER =================  */
+
 
 }
 
 /* Smartphones grandes */
-@media (max-width: 767px) {
+@media  (max-width: 767px) {
   body {
     width: 767px;
   }
@@ -428,6 +583,126 @@ button:active {
     margin-bottom: 0;
     font-size: 2.6rem;
   }
+
+  
+
+    /* ================= menu hamburguer =================  */
+
+  #checkbox {
+    display: none;
+    position: fixed;
+  }
+
+  .toggle {
+    position: relative;
+    width: 40px;
+    height: 40px;
+    cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    transition-duration: .3s;
+    margin-left: 30px;
+  }
+
+  .bars {
+    width: 100%;
+    height: 4px;
+    background-color: rgb(253, 255, 243);
+    border-radius: 5px;
+    transition-duration: .3s;
+  }
+
+
+  #checkbox:checked+.toggle #bar2 {
+    transform: translateY(14px) rotate(60deg);
+    margin-left: 0;
+    transform-origin: right;
+    transition-duration: .3s;
+    z-index: 2;
+  }
+
+  #checkbox:checked+.toggle #bar1 {
+    transform: translateY(28px) rotate(-60deg);
+    transition-duration: .3s;
+    transform-origin: left;
+    z-index: 1;
+  }
+
+  #checkbox:checked+.toggle {
+    transform: rotate(-90deg);
+    z-index: 1001;
+  }
+
+  #checkbox:checked~.container-header {
+    display: block;
+  }
+
+  #checkbox:checked~.container-header .container-menu {
+    height: 100%;
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    padding-right: 30px;
+    align-items: center;
+    justify-content: center;
+    background: linear-gradient(90deg, #012342, #004a8d, #004a8d, #012342);
+    z-index: 1000;
+    flex-direction: column;
+  }
+  #checkbox:checked~.container-header .container-menu .menu {
+    height: 80%;
+    padding-right: 30px;
+    flex-direction: column;
+  }
+
+  #checkbox:checked~.container-header .container-menu .menu a {
+    justify-content: start;
+    width: 100vw;
+    height: 80px;
+    font-size: 2rem;
+  }
+
+  #checkbox:checked~.container-header .container-menu .menu a svg {
+    width: 60px;
+    height: 60px;
+    margin-left: 30%;
+
+  }
+
+  #checkbox:checked~.container-header .container-menu .menu a #svg-laptop {
+    width: 70px;
+  }
+
+  #checkbox:checked~.container-header .container-menu .menu ul {
+    height: 90%;
+    margin-right: 80px;
+    margin-top: 80px;
+  }
+  #checkbox:checked~.container-header .container-menu  button {
+    margin-right: 30px;
+    margin-top: 50px;
+    font-size: 2rem;
+  }
+  #checkbox:checked~.container-header .container-menu  svg {
+    width: 50px;
+    height: 50px;
+  }
+
+  #checkbox:checked~.container-header .container-menu .menu ul li {
+    height: 100%;
+    width: 100%;
+    padding-left: 10px;
+  }
+
+  #rodape h2 {
+    font-size: 1.6rem;
+
+  }
+
+  /* ================= FIM MENU HAMBURGUER =================  */
   
 
 }
@@ -572,6 +847,12 @@ button:active {
     justify-content: center;
     background: linear-gradient(90deg, #012342, #004a8d, #004a8d, #012342);
     z-index: 1000;
+    flex-direction: column;
+  }
+  #checkbox:checked~.container-header .container-menu .menu {
+    height: 80%;
+    padding-right: 30px;
+    flex-direction: column;
   }
 
   #checkbox:checked~.container-header .container-menu .menu a {
@@ -593,8 +874,18 @@ button:active {
   }
 
   #checkbox:checked~.container-header .container-menu .menu ul {
-    height: 100%;
-
+    height: 90%;
+    margin-right: 80px;
+    margin-top: 80px;
+  }
+  #checkbox:checked~.container-header .container-menu  button {
+    margin-right: 30px;
+    margin-top: 50px;
+    font-size: 2rem;
+  }
+  #checkbox:checked~.container-header .container-menu  svg {
+    width: 50px;
+    height: 50px;
   }
 
   #checkbox:checked~.container-header .container-menu .menu ul li {
@@ -604,7 +895,7 @@ button:active {
   }
 
   #rodape h2 {
-    font-size: 1.2rem;
+    font-size: 1.6rem;
 
   }
 
